# lsx

./: Cargo.toml  Makefile  README.md  install.sh
docs/: CONTRIBUTING.md  INSTALLATION.md  USAGE.md
src/: main.rs
