[package]
name = "lsx"
version = "1.3.1-dev"
authors = ["Sergey Desyatkov <sergeydesyatkov@proton.me>"]
edition = "2024"
description = "Imagine ls command, but better"
repository = "https://github.com/desyatkoff/lsx"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"
users = "0.11.0"
